2022-11-15T01:50:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3466741513 # 616
* notice: last 14d: unq all: 9 15
* notice: prev accum: outdated-unq outdated-all / unq all: 153 617 / 161 631
* notice: next accum: outdated-unq outdated-all / unq all: 153 617 / 162 632
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-14]

2022-11-14T16:31:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3463334798 # 615
* notice: last 14d: unq all: 8 14
* notice: prev accum: outdated-unq outdated-all / unq all: 152 615 / 161 631
* notice: next accum: outdated-unq outdated-all / unq all: 153 617 / 161 631
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-31] / []

2022-11-13T16:28:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3456045473 # 612
* notice: last 14d: unq all: 9 16
* notice: prev accum: outdated-unq outdated-all / unq all: 152 615 / 160 630
* notice: next accum: outdated-unq outdated-all / unq all: 152 615 / 161 631
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-11-13]

2022-11-11T16:30:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3446511792 # 606
* notice: last 14d: unq all: 8 15
* notice: prev accum: outdated-unq outdated-all / unq all: 152 615 / 160 628
* notice: next accum: outdated-unq outdated-all / unq all: 152 615 / 160 630
* notice: prev exec diff / last date diff / accum: unq all: +0 +2 -0 -0 / +3 +7 -0 -0 / 3 7
* notice: removed / changed dates: [] / [2022-11-11]

2022-11-11T08:29:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3443594928 # 605