@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-11-15T01:50:37Z",
+  "timestamp" : "2022-11-16T01:51:28Z",
   "count_outdated" : 617,
   "uniques_outdated" : 153,
-  "count" : 632,
-  "uniques" : 162,
+  "count" : 633,
+  "uniques" : 163,
   "views" : [
     {
       "timestamp": "2022-11-02T00:00:00Z",
@@ -42,6 +42,13 @@
     },
     {
       "timestamp": "2022-11-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
