@@ -1,6 +1,6 @@
 {
-  "count": 15,
-  "uniques": 9,
+  "count": 16,
+  "uniques": 10,
   "views": [
     {
       "timestamp": "2022-11-02T00:00:00Z",
@@ -29,6 +29,11 @@
     },
     {
       "timestamp": "2022-11-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-15T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
