@@ -1,3 +1,11 @@
+2022-11-16T01:51:28Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3475698169 # 619
+* notice: last 14d: unq all: 10 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 153 617 / 162 632
+* notice: next accum: outdated-unq outdated-all / unq all: 153 617 / 163 633
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-11-15]
+
 2022-11-15T01:50:37Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3466741513 # 616
 * notice: last 14d: unq all: 9 15
